[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Font/ImprovGOLD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Tabs/gergle.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -1
extra_spacing_space = -3
font_data = ExtResource( 1 )

[node name="Gergle" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 9.0
margin_right = -1.0
margin_bottom = -1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="WindowContent" type="ScrollContainer" parent="."]
margin_left = -1.0
margin_right = 285.0
margin_bottom = 173.0
theme = ExtResource( 2 )

[node name="Gergle" type="ColorRect" parent="WindowContent"]
margin_right = 284.0
margin_bottom = 224.0
rect_min_size = Vector2( 284, 224 )

[node name="WindowContent2" type="Label" parent="WindowContent/Gergle"]
margin_left = 69.0
margin_top = 26.0
margin_right = 203.0
margin_bottom = 56.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Welcome to Gergle"
align = 1

[node name="LineEdit" type="LineEdit" parent="WindowContent/Gergle"]
margin_left = 59.0
margin_top = 74.0
margin_right = 211.0
margin_bottom = 90.0

[node name="PirateButton" type="Button" parent="WindowContent/Gergle"]
margin_left = 51.0
margin_top = 119.0
margin_right = 97.0
margin_bottom = 135.0
text = "Pirate Creek"
icon_align = 1

[node name="HeckersButton" type="Button" parent="WindowContent/Gergle"]
margin_left = 113.0
margin_top = 119.0
margin_right = 159.0
margin_bottom = 135.0
text = "Heckers"
icon_align = 1

[node name="MitgnomeButton" type="Button" parent="WindowContent/Gergle"]
margin_left = 174.0
margin_top = 119.0
margin_right = 220.0
margin_bottom = 135.0
text = "Mitgnome"
icon_align = 1

[node name="CloseButton" type="Button" parent="."]
margin_left = -1.0
margin_right = 21.0
margin_bottom = 8.0
text = "close"

[connection signal="pressed" from="WindowContent/Gergle/PirateButton" to="." method="_pirate_tab"]
[connection signal="pressed" from="WindowContent/Gergle/HeckersButton" to="." method="_yootune_tab"]
[connection signal="pressed" from="WindowContent/Gergle/MitgnomeButton" to="." method="_mitgnome_tab"]
